Add converters, change API contract to return DTOs  (#11)
* Refactoring

* Renamed files

* Merged with main

* Added converters

* Fixed converter

* Add spotless

* Remove comment

* Changed roleentity to role

* Update StoryRequestToStoryEntityConverter.java

* fed fix

---------

Co-authored-by: Federica <federica.ox@gmail.com>