@@ -2,15 +2,15 @@ package com.server.fabula.Controller;
 
 import static org.springframework.http.ResponseEntity.ok;
 
-import com.server.fabula.Entity.Story;
+import com.server.fabula.Entity.StoryEntity;
+import com.server.fabula.Model.Request.StoryRequest;
+import com.server.fabula.Model.Story;
 import com.server.fabula.Service.StoryService;
+import java.time.LocalDate;
+import java.util.List;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-
-import java.time.LocalDate;
-import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api")
@@ -18,30 +18,29 @@ public class StoryController {
 
     private final StoryService StoryService;
 
-
-    public StoryController(StoryService StoryService){
+    public StoryController(StoryService StoryService) {
         this.StoryService = StoryService;
     }
+
     @GetMapping("/story")
-    public List<Story> getAllStories(){
+    public List<Story> getAllStories() {
         return StoryService.findAll();
     }
 
     @GetMapping("/story/{id}")
-    public ResponseEntity<Story> getStoryById(@PathVariable int id){
+    public ResponseEntity<Story> getStoryById(@PathVariable int id) {
         return ok(StoryService.findStoryById(id));
     }
 
     @PostMapping("/story")
-    public ResponseEntity<Story> addStory(@RequestBody Story story, @RequestParam(name = "userId") int userId, @RequestParam(name = "promptId") int promptId){
-        story.setId(0);
-        Story savedStory = StoryService.saveStory(story, userId, promptId);
-        return ResponseEntity.status(HttpStatus.CREATED).body(savedStory);
+    public ResponseEntity<Story> createStory(@RequestBody StoryRequest storyRequest) {
+        return ResponseEntity.status(HttpStatus.CREATED)
+                .body(StoryService.createStory(storyRequest));
     }
 
     @PutMapping("/story")
-    public ResponseEntity<Story> updateStory(@RequestBody Story story){
-        return ok(StoryService.updateStory(story));
+    public ResponseEntity<Story> updateStory(@RequestBody StoryEntity storyEntity) {
+        return ok(StoryService.updateStory(storyEntity));
     }
 
     @DeleteMapping("/story/{id}")
@@ -50,14 +49,18 @@ public class StoryController {
     }
 
     @GetMapping("/story/date/{date}")
-    public ResponseEntity<List<Story>> getStoryByDate(@PathVariable LocalDate date){
-        List<Story> allStories = StoryService.findStoryByDate(date);
+    public ResponseEntity<List<Story>> getStoryByDate(@PathVariable LocalDate date) {
+        List<Story> allStories = StoryService.findStoriesByDate(date);
 
         // Filter stories where share is true
-        List<Story> sharedStories = allStories.stream()
-                .filter(Story::isShare)
-                .collect(Collectors.toList());
+        return ResponseEntity.ok(allStories.stream().filter(Story::getShare).toList());
+    }
 
-        return ResponseEntity.ok(sharedStories);
+    @GetMapping("/story/user/{id}")
+    public ResponseEntity<List<Story>> getStoryByUserId(@PathVariable int id) {
+        List<Story> allStories = StoryService.findStoriesByUserId(id);
+
+        // Filter stories where share is true
+        return ResponseEntity.ok(allStories.stream().toList());
     }
 }
